gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: fitness-gateway-class
spec:
  controllerName: example.com/gateway-controller
